--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY 
   secret_access_key: $AWS_SECRET_KEY
-  bucket: "www.weekendcooks.co.uk"
+  bucket: www.weekendcooks.co.uk
   skip_cleanup: true
   region: eu-central-1
