Changed from slack to email

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: generic
 notifications:
-  slack: $SLACK_KEY
+  email:
+    - pask200@gmail.com
+    - alysha.c94@gmail.com
 deploy:
   provider: s3
   access_key_id: $AWS_ACCESS_KEY
